# HubSpotSDK

./: README.md  pyproject.toml
hubspot_sdk/: client.py  common.py  context.py
hubspot_sdk/crm/objects/: common.py
hubspot_sdk/schema/: builder.py
tests/: test_prop_create.py  test_schema.py
