[tool.poetry]
name = "hubspotsdk"
version = "0.1.0"
description = ""
authors = ["Jonathan Crum <jcrum@theobogroup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beartype = "^0.12.0"
redis = "^4.5.1"
rq = "^1.12.0"
pyyaml = "^6.0"
devtools = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
